<HorizontalScrollView
    android:id="@+id/tools"
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:scrollbars="none"
    android:layout_width="wrap_content"
    android:layout_height="fill_parent">

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="fill_parent"
        android:orientation="horizontal">


        <LinearLayout
            android:id="@+id/btn_paint"
            style="@style/image_edit_menu_ll_style"
            >

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/ico_paint"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="6dp"
                android:text="@string/edit"
                android:textColor="@color/materialcolorpicker__black"
                android:textSize="@dimen/image_edit_text_size"/>

        </LinearLayout>

        <LinearLayout
            android:id="@+id/btn_stickers"
            style="@style/image_edit_menu_ll_style"
            >

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/ico_sticker"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="6dp"
                android:text="@string/stickers"
                android:textColor="@color/black"
                android:textSize="@dimen/image_edit_text_size"/>

        </LinearLayout>

        <LinearLayout
            android:id="@+id/btn_rotate"
            style="@style/image_edit_menu_ll_style"
            >
            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/ico_rotate"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="6dp"
                android:text="@string/rotate"
                android:textColor="@color/black"
                android:textSize="@dimen/image_edit_text_size"/>
        </LinearLayout>

        <LinearLayout
            android:id="@+id/btn_tone"
            style="@style/image_edit_menu_ll_style"
            >

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/ico_tone"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="6dp"
                android:text="@string/tone"
                android:textColor="@color/black"
                android:textSize="@dimen/image_edit_text_size"/>

        </LinearLayout>

        <LinearLayout
            android:id="@+id/btn_crop"
            style="@style/image_edit_menu_ll_style"
            >

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/ico_crop"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="6dp"
                android:text="@string/crop"
                android:textColor="@color/black"
                android:textSize="@dimen/image_edit_text_size"/>
        </LinearLayout>

        <LinearLayout
            android:id="@+id/btn_filter"
            style="@style/image_edit_menu_ll_style"
            >
            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/ico_edit_filter"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="6dp"
                android:text="@string/filter"
                android:textColor="@color/black"
                android:textSize="@dimen/image_edit_text_size"/>

        </LinearLayout>


        <LinearLayout
            android:id="@+id/btn_beauty"
            style="@style/image_edit_menu_ll_style"
            >
            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/ico_edit_beauty"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="6dp"
                android:text="@string/beauty"
                android:textColor="@color/black"
                android:textSize="@dimen/image_edit_text_size"/>
        </LinearLayout>

        <LinearLayout
            android:id="@+id/btn_text"
            style="@style/image_edit_menu_ll_style"
            >
            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/ico_add_text"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="6dp"
                android:text="@string/text"
                android:textColor="@color/black"
                android:textSize="@dimen/image_edit_text_size"/>
        </LinearLayout>

    </LinearLayout>
</HorizontalScrollView>

